# solana-dai

./: Anchor.toml  README.md  docker-compose.yml  package-lock.json  package.json  txtx.yml
app/: .eslintrc.json  .gitignore  initialize_solana_dai.js  next.config.js  package-lock.json  package.json  tsconfig.json
app/scripts/: anchor-program-constructor-test.ts  print-anchor-version.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create-cdp/: page.tsx
app/src/app/docs/: page.tsx
app/src/app/manage-cdp/: page.tsx
app/src/components/: AssetPriceDisplay.tsx  CDPCreationForm.tsx  Header.tsx  WalletConnectButton.tsx
app/src/components/cdp/: CDPActionCard.tsx  CDPDetailsCard.tsx  CDPPortfolioOverview.tsx
app/src/components/security/: SecurityGuard.tsx  SecurityProvider.tsx  TransactionSigner.tsx
app/src/components/ui/: Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx
app/src/context/: WalletContextProvider.tsx
app/src/hooks/: useSecureStorage.ts
app/src/idl/: index.ts  solana_dai.json  solana_dai.ts
app/src/services/: cdp-management.service.ts  cdp.service.ts  price.service.ts  security-monitoring.service.ts  wallet.service.ts
app/src/utils/: cdp.ts  cdpTypes.ts  constants.ts  format.ts  securityUtils.ts  solanaDaiInteractions.ts  supportedAssets.ts
programs/solana-dai/: Cargo.toml
programs/solana-dai/src/: accounts.rs  accounts_def.rs  lib.rs
runbooks/: README.md
runbooks/deployment/: main.tx
tests/: pyth.ts  solana-dai.ts
