[package]
name = "solana-dai"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_dai"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {  version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
pyth-sdk-solana = "0.10.4" # Updated to compatible version